--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="save">Save</string>
     <string name="phoneNumberCanNotBeEmpty">Phone number can not be empty</string>
     <string name="yardsCanNotBeEmpty">Yards can not be empty</string>
+    <string name="logout">Logout</string>
 </resources>
