--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,7 @@
     <string name="friends">Friends</string>
     <string name="addFriend">Add friend</string>
     <string name="removeFriend">Remove\nfriend</string>
+    <string name="search">Search</string>
     <string-array name="receiveSignalTime">
         <item>3</item>
         <item>5</item>
