--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,7 @@
     <string name="addFriend">Add friend</string>
     <string name="removeFriend">Remove\nfriend</string>
     <string name="search">Search</string>
+    <string name="selectTracker">Select tracker you want to activate:</string>
     <string-array name="receiveSignalTime">
         <item>3</item>
         <item>5</item>
