tracker update api

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,9 +70,10 @@
     <string name="all">All</string>
     <string name="notify_photo_title">Photo</string>
     <string name="notify_photo_text">GPS Ping</string>
-    <string name="profileSaved">Profile succesfully updated</string>
+    <string name="profileSaved">Profile successfully updated</string>
     <string name="smsAlertDialogTitle">SMS</string>
     <string name="smsAlertDialogMessage">This will send an sms to your tracker</string>
+    <string name="trackerUpdated">Tracker successfully updated</string>
     <string-array name="receiveSignalTime">
         <item>3</item>
         <item>5</item>
