reset tracker button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,6 +108,7 @@
     <string name="remove">Remove</string>
     <string name="friendsRequiresSubscription">To use this action you should add your tracker first or buy annual subscription.</string>
     <string name="buySubscription">Buy subscription</string>
+    <string name="reset">Reset</string>
     <string-array name="receiveSignalTime">
         <item>20</item>
         <item>30</item>
