--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -110,11 +110,20 @@
     <string name="buySubscription">Buy subscription</string>
     <string name="reset">Reset</string>
     <string-array name="receiveSignalTime">
-        <item>20</item>
-        <item>30</item>
-        <item>40</item>
-        <item>50</item>
-        <item>60</item>
+        <item>20 sekunder</item>
+        <item>30 sekunder</item>
+        <item>40 sekunder</item>
+        <item>50 sekunder</item>
+        <item>60 sekunder</item>
+        <item>2 minutter</item>
+        <item>3 minutter</item>
+        <item>4 minutter</item>
+        <item>5 minutter</item>
+        <item>7 minutter</item>
+        <item>10 minutter</item>
+        <item>20 minutter</item>
+        <item>30 minutter</item>
+        <item>60 minutter</item>
     </string-array>
     <string-array name="receiveSignalMeasure">
         <item>Sekunder</item>
