--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,12 +110,39 @@
     <string name="buySubscription">Buy subscription</string>
     <string name="reset">Reset</string>
     <string-array name="receiveSignalTime">
+        <item>20 seconds</item>
+        <item>30 seconds</item>
+        <item>40 seconds</item>
+        <item>50 seconds</item>
+        <item>60 seconds</item>
+        <item>2 minutes</item>
+        <item>3 minutes</item>
+        <item>4 minutes</item>
+        <item>5 minutes</item>
+        <item>7 minutes</item>
+        <item>10 minutes</item>
+        <item>20 minutes</item>
+        <item>30 minutes</item>
+        <item>60 minutes</item>
+    </string-array>
+
+    <string-array name="receiveSignalTimeValues">
         <item>20</item>
         <item>30</item>
         <item>40</item>
         <item>50</item>
         <item>60</item>
+        <item>120</item>
+        <item>180</item>
+        <item>240</item>
+        <item>300</item>
+        <item>420</item>
+        <item>600</item>
+        <item>1200</item>
+        <item>1800</item>
+        <item>3600</item>
     </string-array>
+
     <string-array name="receiveSignalMeasure">
         <item>Seconds</item>
         <item>Minutes</item>
