add bike tracker

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,6 +111,14 @@
     <string name="friendsRequiresSubscription">To use this action you should add your tracker first or buy annual subscription.</string>
     <string name="buySubscription">Buy subscription</string>
     <string name="reset">Reset</string>
+    <string name="bikeTracking">Bike Tracking</string>
+    <string name="ledLight">LED Light</string>
+    <string name="active">Active</string>
+    <string name="turnOff">Turn Off</string>
+    <string name="turnOn">Turn On</string>
+    <string name="inactive">Inactive</string>
+    <string name="shockAlarm">Shock Alarm</string>
+    <string name="shockFlashAlarm">Shock Flash Alarm</string>
     <string-array name="receiveSignalTime">
         <item>20 seconds</item>
         <item>30 seconds</item>
