--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -224,6 +224,31 @@
 
     <string name="reset">Palauta</string>
 
+    <string name="bikeTracking">Bike Tracking</string>
+    <string name="ledLight">LED Light</string>
+    <string name="active">Active</string>
+    <string name="turnOff">Turn Off</string>
+    <string name="turnOn">Turn On</string>
+    <string name="inactive">Inactive</string>
+    <string name="shockAlarm">Shock Alarm</string>
+    <string name="shockFlashAlarm">Shock Flash Alarm</string>
+    <string name="code">Code</string>
+    <string name="phoneCodeCanNotBeEmpty">Phone code can not be empty</string>
+    <string name="pinCode">PIN Code</string>
+    <string name="pinCodeLengthError">Input %1$s characters PIN code</string>
+    <string name="trackerPinCode">Tracker PIN Code</string>
+    <string name="last4DigitsError">Input tracker number last 4 digits</string>
+    <string name="trackerLast4Digits">Tracker number last 4 digits</string>
+    <string name="address">Address</string>
+    <string name="country">Country</string>
+    <string name="city">City</string>
+    <string name="zipCode">Zip Code</string>
+    <string name="addressCanNotBeEmpty">Address can not be empty</string>
+    <string name="cityCanNotBeEmpty">City can not be empty</string>
+    <string name="countryCanNotBeEmpty">Country can not be empty</string>
+    <string name="zipCodeCanNotBeEmpty">Zip code can not be empty</string>
+    <string name="skip"><u>Skip</u></string>
+
     <string-array name="receiveSignalTime">
 
         <item>20 sekuntia</item>
@@ -258,40 +283,6 @@
 
     </string-array>
 
-
-    <string-array name="receiveSignalTimeValues" translatable="false">
-
-        <item>20</item>
-
-        <item>30</item>
-
-        <item>40</item>
-
-        <item>50</item>
-
-        <item>60</item>
-
-        <item>120</item>
-
-        <item>180</item>
-
-        <item>300</item>
-
-        <item>420</item>
-
-        <item>600</item>
-
-        <item>1200</item>
-
-        <item>1800</item>
-
-        <item>2400</item>
-
-        <item>3000</item>
-
-        <item>3600</item>
-
-    </string-array>
 
 
     <string-array name="receiveSignalMeasure">
