--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -109,33 +109,34 @@
     <string name="areYouSureRemovePoi">Är du säker på att du vill ta bort den här intressepunkten?</string>
     <string name="removePoiTitle">Ta bort intressepunkt</string>
     <string name="remove">Ta bort</string>
-    <string name="friendsRequiresSubscription">För att använda den här funktionen måste du först lägga till din GPS-spårare eller beställa en årsprenumeration.</string>
-    <string name="buySubscription">Beställ prenumeration</string>
+    <string name="friendsRequiresSubscription">För att använda den här funktionen måste du först lägga till din GPS-spårare eller köpa en årlig prenumeration.</string>
+    <string name="buySubscription">Köp prenumeration</string>
     <string name="reset">Återställ</string>
-    <string name="bikeTracking">Bike Tracking</string>
-    <string name="ledLight">LED Light</string>
-    <string name="active">Active</string>
-    <string name="turnOff">Turn Off</string>
-    <string name="turnOn">Turn On</string>
-    <string name="inactive">Inactive</string>
-    <string name="shockAlarm">Shock Alarm</string>
-    <string name="shockFlashAlarm">Shock Flash Alarm</string>
-    <string name="code">Code</string>
-    <string name="phoneCodeCanNotBeEmpty">Phone code can not be empty</string>
-    <string name="pinCode">PIN Code</string>
-    <string name="pinCodeLengthError">Input %1$s characters PIN code</string>
-    <string name="trackerPinCode">Tracker PIN Code</string>
-    <string name="last4DigitsError">Input tracker number last 4 digits</string>
-    <string name="trackerLast4Digits">Tracker number last 4 digits</string>
-    <string name="address">Address</string>
-    <string name="country">Country</string>
-    <string name="city">City</string>
-    <string name="zipCode">Zip Code</string>
-    <string name="addressCanNotBeEmpty">Address can not be empty</string>
-    <string name="cityCanNotBeEmpty">City can not be empty</string>
-    <string name="countryCanNotBeEmpty">Country can not be empty</string>
-    <string name="zipCodeCanNotBeEmpty">Zip code can not be empty</string>
-    <string name="skip"><u>Skip</u></string>
+    <string name="bikeTracking">Cykelspårning</string>
+    <string name="ledLight">LED-lampa</string>
+    <string name="active">Aktiv</string>
+    <string name="turnOff">Stäng av </string>
+    <string name="turnOn">Slå på</string>
+    <string name="inactive">Inte aktiv</string>
+    <string name="shockAlarm">Alarm</string>
+    <string name="shockFlashAlarm">Blinkande alarm</string>
+    <string name="code">Kod</string>
+    <string name="phoneCodeCanNotBeEmpty">Kod måste fyllas i</string>
+    <string name="pinCode">PIN-kod</string>
+    <string name="pinCodeLengthError">Slå in %1$s-siffrig PIN-kod</string>
+    <string name="trackerPinCode">GPS-spårarens PIN-kod</string>
+    <string name="last4DigitsError">Slå in GPS-spårarens 4 sista siffror</string>
+    <string name="trackerLast4Digits">GPS-spårarens 4 sista siffror</string>
+    <string name="address">Adress</string>
+    <string name="country">Land</string>
+    <string name="city">Stad</string>
+    <string name="zipCode">Postnummer</string>
+    <string name="addressCanNotBeEmpty">Adress-fält måste fyllas i</string>
+    <string name="cityCanNotBeEmpty">Stad måste fyllas i</string>
+    <string name="countryCanNotBeEmpty">Land måste fyllas i</string>
+    <string name="zipCodeCanNotBeEmpty">Postnummer måste fyllas i</string>
+    <string name="skip"><u>Hoppa över</u></string>
+
     <string-array name="receiveSignalTime">
         <item>20 sekunder</item>
         <item>30 sekunder</item>
