--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -218,36 +218,34 @@
 
     <string name="remove">Fjern</string>
 
-    <string name="friendsRequiresSubscription">For at foretage denne handling, bør du først tilføje din sporingsenhed eller købe et årligt abonnement.</string>
-
+    <string name="friendsRequiresSubscription">For at benytte denne handling, bør du først tilføje din sporer, eller købe et årligt abonnement. </string>
     <string name="buySubscription">Køb abonnement</string>
-
-    <string name="reset">Gendan</string>
-
-    <string name="bikeTracking">Bike Tracking</string>
-    <string name="ledLight">LED Light</string>
-    <string name="active">Active</string>
-    <string name="turnOff">Turn Off</string>
-    <string name="turnOn">Turn On</string>
-    <string name="inactive">Inactive</string>
+    <string name="reset">Genstart</string>
+    <string name="bikeTracking">Cykel Sporing</string>
+    <string name="ledLight">LED Lys</string>
+    <string name="active">Aktiv</string>
+    <string name="turnOff">Tænd</string>
+    <string name="turnOn">Sluk</string>
+    <string name="inactive">Inaktiv</string>
     <string name="shockAlarm">Shock Alarm</string>
     <string name="shockFlashAlarm">Shock Flash Alarm</string>
-    <string name="code">Code</string>
-    <string name="phoneCodeCanNotBeEmpty">Phone code can not be empty</string>
-    <string name="pinCode">PIN Code</string>
-    <string name="pinCodeLengthError">Input %1$s characters PIN code</string>
-    <string name="trackerPinCode">Tracker PIN Code</string>
-    <string name="last4DigitsError">Input tracker number last 4 digits</string>
-    <string name="trackerLast4Digits">Tracker number last 4 digits</string>
-    <string name="address">Address</string>
-    <string name="country">Country</string>
-    <string name="city">City</string>
-    <string name="zipCode">Zip Code</string>
-    <string name="addressCanNotBeEmpty">Address can not be empty</string>
-    <string name="cityCanNotBeEmpty">City can not be empty</string>
-    <string name="countryCanNotBeEmpty">Country can not be empty</string>
-    <string name="zipCodeCanNotBeEmpty">Zip code can not be empty</string>
-    <string name="skip"><u>Skip</u></string>
+    <string name="code">Kode</string>
+    <string name="phoneCodeCanNotBeEmpty">Telefonkoden kan ikke være tom</string>
+    <string name="pinCode">PIN Kode</string>
+    <string name="pinCodeLengthError">Indtast %1$s tegns PIN kode</string>
+    <string name="trackerPinCode">Sporings PIN kode</string>
+    <string name="last4DigitsError">Indtast sporingsnummerets sidste 4 cifre </string>
+    <string name="trackerLast4Digits">Sporingsnummerets sidste 4 cifre</string>
+    <string name="address">Adresse</string>
+    <string name="country">Land</string>
+    <string name="city">By</string>
+    <string name="zipCode">Postnummer</string>
+    <string name="addressCanNotBeEmpty">Adressen kan ikke være tom</string>
+    <string name="cityCanNotBeEmpty">By kan ikke være tom</string>
+    <string name="countryCanNotBeEmpty">Land kan ikke være tom</string>
+    <string name="zipCodeCanNotBeEmpty">Postnummer kan ikke være tom</string>
+    <string name="skip"><u>Spring over</u></string>
+
 
     <string-array name="receiveSignalTime">
 
