--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -109,33 +109,34 @@
     <string name="areYouSureRemovePoi">Er du sikker på at du vil slette dette interesse punktet</string>
     <string name="removePoiTitle">Slett interesse punkt</string>
     <string name="remove">Slett</string>
-    <string name="friendsRequiresSubscription">To use this action you should add your tracker first or buy annual subscription.</string>
-    <string name="buySubscription">Buy subscription</string>
+    <string name="friendsRequiresSubscription"> For å bruke denne funksjonen må du kjøpe abbonnement. </string>
+    <string name="buySubscription">Kjøp abbonnement</string>
     <string name="reset">Reset</string>
-    <string name="bikeTracking">Bike Tracking</string>
-    <string name="ledLight">LED Light</string>
-    <string name="active">Active</string>
-    <string name="turnOff">Turn Off</string>
-    <string name="turnOn">Turn On</string>
-    <string name="inactive">Inactive</string>
+    <string name="bikeTracking">Sykkel Tracking</string>
+    <string name="ledLight">LED Lys</string>
+    <string name="active">Aktiv</string>
+    <string name="turnOff">Slå av</string>
+    <string name="turnOn">Slå på</string>
+    <string name="inactive">Inaktiv</string>
     <string name="shockAlarm">Shock Alarm</string>
     <string name="shockFlashAlarm">Shock Flash Alarm</string>
-    <string name="code">Code</string>
-    <string name="phoneCodeCanNotBeEmpty">Phone code can not be empty</string>
-    <string name="pinCode">PIN Code</string>
-    <string name="pinCodeLengthError">Input %1$s characters PIN code</string>
-    <string name="trackerPinCode">Tracker PIN Code</string>
-    <string name="last4DigitsError">Input tracker number last 4 digits</string>
-    <string name="trackerLast4Digits">Tracker number last 4 digits</string>
-    <string name="address">Address</string>
-    <string name="country">Country</string>
-    <string name="city">City</string>
-    <string name="zipCode">Zip Code</string>
-    <string name="addressCanNotBeEmpty">Address can not be empty</string>
-    <string name="cityCanNotBeEmpty">City can not be empty</string>
-    <string name="countryCanNotBeEmpty">Country can not be empty</string>
-    <string name="zipCodeCanNotBeEmpty">Zip code can not be empty</string>
-    <string name="skip"><u>Skip</u></string>
+    <string name="code">Kode</string>
+    <string name="phoneCodeCanNotBeEmpty">Vennligst fyll inn alle felt</string>
+    <string name="pinCode">PIN Kode</string>
+    <string name="pinCodeLengthError">Legg inn %1$s sifret PIN Kode</string>
+    <string name="trackerPinCode">Tracker PIN Kode</string>
+    <string name="last4DigitsError">Legg inn tracker simkort nummer, fire siffer. </string>
+    <string name="trackerLast4Digits">Tracker nummer siste 4 siffer</string>
+    <string name="address">Adresse</string>
+    <string name="country">Land</string>
+    <string name="city">By</string>
+    <string name="zipCode">Postnr</string>
+    <string name="addressCanNotBeEmpty">Vennligst fyll inn adresse</string>
+    <string name="cityCanNotBeEmpty">Vennlist legg inn by</string>
+    <string name="countryCanNotBeEmpty">Vennligst legg inn land</string>
+    <string name="zipCodeCanNotBeEmpty">Vennligst legg inn postnr</string>
+    <string name="skip"><u>Hopp over</u></string>
+
     <string-array name="receiveSignalTime">
         <item>20 sekunder</item>
         <item>30 sekunder</item>
