--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -135,6 +135,9 @@
     <string name="countryCanNotBeEmpty">Country can not be empty</string>
     <string name="zipCodeCanNotBeEmpty">Zip code can not be empty</string>
     <string name="skip"><u>Skip</u></string>
+    <string name="pauseSubscription" translatable="false">Pause Subscription</string>
+    <string name="pauseSubscriptionEmailBody" translatable="false">
+        Name: %1$s\nAddress: %2$s\nUsername: %3$s\n</string>
     <string-array name="receiveSignalTime">
         <item>20 seconds</item>
         <item>30 seconds</item>
