add new tracker help dialog

--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -301,6 +301,7 @@
         <item>60 minutter</item>
 
     </string-array>
+    <string name="inputPhoneInProfileError">Please input phone number in settings before resetting</string>
 
 
 </resources>
