--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -302,6 +302,7 @@
         <item>60 minuuttia</item>
 
     </string-array>
+    <string name="inputPhoneInProfileError">Please input phone number in settings before resetting</string>
 
 
 </resources>
