--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -166,6 +166,7 @@
         <item>30 minuter</item>
         <item>60 minuter</item>
     </string-array>
+    <string name="inputPhoneInProfileError">Please input phone number in settings before resetting</string>
 
 
 </resources>
