--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -303,6 +303,9 @@
 
     </string-array>
     <string name="inputPhoneInProfileError">Please input phone number in settings before resetting</string>
+    <string name="canBeFoundInside">can be found inside the box with tracker:</string>
+    <string name="helpNewTracker">Where can I find my\n<b>Tracker Number</b> and <b>IMEI</b>?</string>
+    <string name="isPlacedOnTheBack">is placed on the back side of your tracker:</string>
 
 
 </resources>
