--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -303,10 +303,11 @@
 
     </string-array>
     <string name="inputPhoneInProfileError">Please input phone number in settings before resetting</string>
-    <string name="canBeFoundInside">can be found inside the box with tracker:</string>
-    <string name="helpNewTracker">Where can I find my\n<b>Tracker Number</b> and <b>IMEI</b>?</string>
-    <string name="isPlacedOnTheBack">is placed on the back side of your tracker:</string>
     <string name="faq">Vianmääritys</string>
+    <string name="canBeFoundInside">on paketin sisällä yhdessä paikantimen kanssa</string>
+    <string name="helpNewTracker">Mistä löydän paikantimen <b>matkapuhelinnumeron</b> ja <b>imei-numeron</b></string>
+    <string name="isPlacedOnTheBack">sijaitsee paikantimen takakuoressa</string>
+    <string name="pauseSubscription">Keskeytä Tilaus</string>
 
 
 </resources>
