--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -166,9 +166,10 @@
         <item>60 minutter</item>
     </string-array>
     <string name="inputPhoneInProfileError">Please input phone number in settings before resetting</string>
-    <string name="canBeFoundInside">can be found inside the box with tracker:</string>
-    <string name="helpNewTracker">Where can I find my\n<b>Tracker Number</b> and <b>IMEI</b>?</string>
-    <string name="isPlacedOnTheBack">is placed on the back side of your tracker:</string>
     <string name="faq">Problem løsning</string>
+    <string name="canBeFoundInside"> finner du inne i boksen til trackeren</string>
+    <string name="helpNewTracker">Hvor finner jeg <b>trackerens mobil</b> og <b>IMEI nummer</b></string>
+    <string name="isPlacedOnTheBack">er på baksiden av selve trackeren</string>
+    <string name="pauseSubscription">Pause abonnement</string>
 
 </resources>
